# meridian

./: .env.example  .gitignore  COMMIT_PR_MESSAGE.md  README.md  config.yaml.example  pm-agent-implementation-plan.md  pyproject.toml
pm_agent/adapters/llm/: __init__.py  factory.py  resolver.py  structured.py
pm_agent/adapters/ticket/: base.py  factory.py  github.py  jira.py  models.py
pm_agent/config/: loader.py  models.py  ritual_loader.py
pm_agent/context/: __init__.py  budget_watcher.py  invoker.py  limits.py  state_compressor.py  summarization.py
pm_agent/context/memory/: __init__.py  base.py  sqlite.py
pm_agent/core/: logging.py  state.py
skills/github-issues-lookup/: SKILL.md
skills/project-management-guide/: SKILL.md
skills/spec-driven-development-specdev/: SKILL.md
skills/spec-driven-development-specdev/references/: patterns.md  plan-template.md  spec-template.md  tasks-template.md
skills/spec-driven-development-specdev/scripts/specdev-cli/: biome.json  package.json  specdev  specdev.ps1
skills/spec-driven-development-specdev/scripts/specdev-cli/src/: index.ts
skills/spec-driven-development-specdev/scripts/specdev-cli/src/__tests__/: args.test.ts  progress.test.ts  safe-io.test.ts  spec-lookup.test.ts  spec-parser.test.ts  validator.test.ts
skills/spec-driven-development-specdev/scripts/specdev-cli/src/commands/: archive.ts  context.ts  hook.ts  init.ts  list.ts  new.ts  path.ts  validate.ts
skills/spec-driven-development-specdev/scripts/specdev-cli/src/templates/: index.ts
skills/spec-driven-development-specdev/scripts/specdev-cli/src/types/: index.ts
skills/spec-driven-development-specdev/scripts/specdev-cli/src/ui/: output.ts
tests/unit/: TEST_SCENARIOS_CONTEXT_MANAGEMENT.md  TEST_SCENARIOS_LLM_ROUTER.md  test_agent_memory.py  test_budget_watcher.py  test_llm_router.py  test_state_compressor.py  test_summarization.py  test_ticket_adapters.py
(+2 files in other folders)
